# rasa-integration-testing

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: check.yml  config.yml  publish.yml
integration_testing/: __main__.py  helper.py
rasa_integration_testing/: __main__.py  application.py  common.py  comparator.py  configuration.py  interaction.py  protocol.py  rest_runner.py  runner.py  scenario.py  socketio_runner.py
rasa_integration_testing/common/: configuration.py  identifier.py  utils.py
tests/: test_application.py  test_common.py  test_comparator.py  test_configuration.py  test_helper.py  test_identifier.py  test_logging_provider.py  test_main.py  test_rest_runner.py  test_runner.py  test_scenario.py  test_socketio_runner.py  test_test_writer.py
tests/common/: config.ini  test_common.py  test_configuration.py  test_identifier.py
tests/main_scenarios/: failure_config.ini  fragmented_config.ini  interaction_templates_config.ini  mixed_diff_config.ini  success_config.ini
tests/main_scenarios/fail/: config.ini
tests/main_scenarios/fragmented/: config.ini
tests/main_scenarios/interaction_templates/: config.ini
tests/main_scenarios/mixed_diff/: config.ini
tests/socketio_scenarios/success/: config.ini
tests/test_main_data/: test_mixed_diff_scenario  test_successful_scenario  test_unsuccessful_scenario
tests/test_scenarios/: fragmented.yml  interaction_templates.yml  invalid_not_a_list.yml  invalid_properties.yml  simple.yml
(+27 files in other folders)
