[tool.poetry]
name = "rasa-integration-testing"
version = "0.1.3"
description = "A tool for end-to-end testing Rasa bots"
authors = ["Nu Echo"]

[tool.poetry.dependencies]
click = "^7.1.1"
coloredlogs = "^10.0"
jinja2 = "^2.11.2"
python = "^3.6"
ruamel-yaml = "^0.16.10"
python-socketio = "^4.6.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
aiohttp = "^3.6.2"
httmock = "^1.3.0"
pytest = "5.3.4"
pytest-cov = "2.8.1"
black = "19.10b0"
flake8 = "3.7.9"
isort = "^4.3.21"
mypy = "0.770"
pep8-naming = "0.10.0"
pylama = "^7.7.1"
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
